--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -36,6 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pip install sklearn"
+    "pip install numpy"
     "import io\n",
     "import random\n",
     "import string # to process standard python strings\n",
