--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install sklearn\n"
-    "pip install numpy\n"
+    "pip install sklearn\n",
+    "pip install numpy\n",
     "import io\n",
     "import random\n",
     "import string # to process standard python strings\n",
