--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -32,12 +32,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sklearn\n",
+      "  Downloading https://files.pythonhosted.org/packages/1e/7a/dbb3be0ce9bd5c8b7e3d87328e79063f8b263b2b1bfa4774cb1147bfcd3f/sklearn-0.0.tar.gz\n",
+      "Collecting scikit-learn (from sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9f/c5/e5267eb84994e9a92a2c6a6ee768514f255d036f3c8378acfa694e9f2c99/scikit_learn-0.21.3-cp37-cp37m-manylinux1_x86_64.whl (6.7MB)\n",
+      "\u001b[K     |████████████████████████████████| 6.7MB 3.2MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting numpy>=1.11.0 (from scikit-learn->sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ba/e0/46e2f0540370f2661b044647fa447fef2ecbcc8f7cdb4329ca2feb03fb23/numpy-1.17.2-cp37-cp37m-manylinux1_x86_64.whl (20.3MB)\n",
+      "\u001b[K     |████████████████████████████████| 20.3MB 27.7MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting joblib>=0.11 (from scikit-learn->sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/8f/42/155696f85f344c066e17af287359c9786b436b1bf86029bb3411283274f3/joblib-0.14.0-py2.py3-none-any.whl (294kB)\n",
+      "\u001b[K     |████████████████████████████████| 296kB 40.4MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting scipy>=0.17.0 (from scikit-learn->sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/94/7f/b535ec711cbcc3246abea4385d17e1b325d4c3404dd86f15fc4f3dba1dbb/scipy-1.3.1-cp37-cp37m-manylinux1_x86_64.whl (25.2MB)\n",
+      "\u001b[K     |████████████████████████████████| 25.2MB 31.8MB/s eta 0:00:01\n",
+      "\u001b[?25hBuilding wheels for collected packages: sklearn\n",
+      "  Building wheel for sklearn (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1316 sha256=d6546f3bf698c166f1ea86d36a66673833e77576a7dbe3227b135a34f99ac8c0\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/76/03/bb/589d421d27431bcd2c6da284d5f2286c8e3b2ea3cf1594c074\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: numpy, joblib, scipy, scikit-learn, sklearn\n"
+     ]
+    }
+   ],
    "source": [
-    "pip install sklearn\n",
-    "pip install numpy\n",
+    "!pip install sklearn\n",
+    "!pip install numpy\n",
     "import io\n",
     "import random\n",
     "import string # to process standard python strings\n",
